--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "petra_french_bulldogs",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/peters313"
+    "url": "git+https://github.com/peters313/petra_french_bulldogs.git"
   },
   "author": "Eric Peters",
   "license": "ISC",
@@ -22,5 +21,11 @@
     "grunt-contrib-uglify": "^0.11.0",
     "mongoose": "^4.3.4",
     "path": "^0.12.7"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/peters313/petra_french_bulldogs/issues"
+  },
+  "homepage": "https://github.com/peters313/petra_french_bulldogs#readme",
+  "devDependencies": {},
+  "description": ""
 }
